# snakemake

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yml  .sonarcloud.properties  .test_durations  .wci.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  README  README.md  Snakefile  azure-pipelines.yml  bitbucket-pipelines.yml  circle.yml  conf.py  doc-environment.yml  environment.yml  fg.dot  format.sh  index.rst  motoState.p  output_0.txt  package-lock.json  package.json  pixi.toml  pyproject.toml  pytest.ini  readthedocs.yml  release-notes.md  release-please-config.json  (+11 more)
.circleci/: common.sh  config.yml  setup-aux.sh  setup.sh
.codeboarding/: Core_Workflow_Engine.md  Data_Management.md  Execution_Layer.md  Reporting_Utilities.md  User_Interaction_Configuration.md  on_boarding.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: announce-release.yml  cancel.yml  codespell.yml  conventional-prs.yml  docker-publish-release.yml  docker-publish.yml  docs.yml  main.yml  post_to_mastodon.sh  post_to_mastodon.yml  publish.yaml  release-please.yml  slurmcluster.yml  stale.yml  test-flux.yaml
apidocs/: .readthedocs.yaml  Makefile  conf.py  index.rst  requirements.txt
apidocs/_templates/: ethicalads.html  module_template.rst  toc.html
apidocs/api_reference/: snakemake.rst  snakemake_api.rst  snakemake_utils.rst
conda/: build.sh
conda/snakemake/: meta.yaml
debian/: changelog  python3-snakemake.install
docker/: Dockerfile
docs/: Makefile  api.rst  conf.py  executable.rst  index.rst  requirements.txt  utils.rst
docs/_static/: custom.css  default.css  gurubase-widget.js  sphinx-argparse.css  theme.css
docs/_templates/: index.html  sidebar_toc.html
docs/apidocs/: conf.py  index.rst
docs/cit_art_etc/: citations.rst  citing.rst  external_resources.rst  talks_posters.rst  workflow_repo.rst
docs/cli/: index.rst  info.rst  run.rst
docs/conf-api/: conf.py
docs/executing/: caching.rst  cli.rst  cloud.rst  cluster-cloud.rst  cluster.rst  cluster_execution.rst  executors.rst  grouping.rst  interoperability.rst  monitoring.rst  provenance.rst  resource_management.rst
docs/executor_tutorial/: azure_aks.rst  azure_batch.rst  flux.rst  google_lifesciences.rst  tutorial.rst
docs/getting_started/: examples.rst  executable.rst  getting_started.rst  installation.rst  migration.rst  overview.rst  quickstart.rst  setup.rst  toc.md
docs/project_info/: authors.rst  citations.rst  codebase.rst  contributing.rst  faq.rst  grammar.rst  history.md  history.rst  license.rst  more_resources.rst  support.rst
docs/snakefiles/: best_practices.rst  cluster_configuration.rst  configuration.rst  debugging_workflows.rst  depend_version.rst  deployment.rst  dynamic_files.rst  foreign_wms.rst  grammar.rst  includes.rst  input_functions.rst  job_properties.rst  lifetime_handlers  modularization.rst  other_stuff.rst  r_scripting.rst  remote_files.rst  reporting.rst  reports.rst  resources.rst  rules.rst  storage.rst  sub_workflows.rst  testing.rst  tracking.rst  utils.rst  wrappers.rst  writing_snakefiles.rst
docs/tutorial/: additional_features.rst  advanced.rst  basics.rst  bootstrap.css  setup.rst  short.rst  snakemake-tutorial.rst  tutorial.rst  welcome.rst
docs/user_manual/: all_options.rst  bash_completion.rst  invocation.rst  visualization.rst
examples/c/: README.txt
examples/cufflinks/: Snakefile
examples/flux/: Dockerfile  Snakefile
examples/hello-world/: Snakefile  config.yaml
examples/latex/: Snakefile  tex.rules  tex.smrules
examples/mirna/: dag.dot
examples/report/: Snakefile  report.html
examples/tutorial-oras/: README.md  Snakefile  environment.yaml
misc/: snakemake.vim
misc/nano/: README.md
misc/vim/: README.md
playground/iteration/: Snakefile
playground/react/: categories.js  index.html  results.js  rulegraph.js  timeline.js
rust/: Cargo.toml
rust/src/: lib.rs
sm/: .project
snakemake/: .pydevproject  __init__.py  __main__.py  _version.py  access_patterns.py  api.py  benchmark.py  checkpoints.py  cli.py  common.py  conda.py  cwl.py  dag.py  decorators.py  environments.py  exceptions.py  executors.py  futures.py  gui.html  gui.py  interfaces.py  io.py  ioflags.py  ioutils.py  jobs.py  jobscript.sh  jupyter.py  linting.py  logging.py  modules.py  notebook.py  output_index.py  parser.py  parser2.py  path_modifier.py  persistence.py  plugins.py  profiles.py  report.css  report.py  (+22 more)
snakemake/assets/: __init__.py
snakemake/caching/: __init__.py  hash.py  local.py  remote.py  storage.py
snakemake/common/: __init__.py  argparse.py  configfile.py  enum_action.py  future.py  git.py  plugin.py  prefix_lookup.py  remote.py  tbdstring.py  typing.py  workdir_handler.py
snakemake/debian/: changelog  control  python3-snakemake.install  rules  snakemake.install
snakemake/deployment/: __init__.py  base.py  conda.py  (+7 more)
tests/: README.md  Snakefile  common.py  conftest.py  test_api.py  test_args.py  test_argument_parser.py  test_azure_batch_executor.py  test_benchmark_pss.py  test_caching.py  test_cli.py  test_dag_reset_after_dryrun.py  test_executor_test_suite.py  test_expand.py  test_google_lifesciences.py  test_internals.py  test_io.py  test_issue413.py  test_jupyter_notebook_pathlike.py  test_kubernetes.py  test_linting.py  test_logging.py  test_output_index.py  test_persistence.py  test_prefix_lookup.py  test_remote_snakefile.py  test_remote_temp_cleanup.py  test_report.py  test_schema.py  test_script.py  test_shell.py  test_slurm.py  test_software_directive.py  test_sourcecache.py  test_target_jobs.py  test_telemetry.py  test_telemetry_parsing.py  test_tes.py  test_tes_ftp.py  test_tibanna.py  (+5 more)
tests/test_prebuilt_conda_script/dummy_package/: setup.cfg
tests/test_prebuilt_conda_script/dummy_package/src/dummy/: dummy.py
tests/test_prebuilt_conda_script/dummy_package/src/dummy.egg-info/: PKG-INFO  SOURCES.txt
tutorial/: Snakefile
(+1817 files in other folders)
