[metadata]
name = snakemake
author = Johannes Köster
author_email = johannes.koester@tu-dortmund.de
project_urls =
    Documentation = https://snakemake.readthedocs.io
    Source = https://github.com/snakemake/snakemake
description = Workflow management system to create reproducible and scalable data analyses
long_description =
    Snakemake is a workflow management system that aims to reduce the
    complexity of creating workflows by providing a fast and comfortable
    execution environment, together with a clean and modern specification
    language in python style. Snakemake workflows are essentially Python
    scripts extended by declarative code to define rules. Rules describe
    how to create output files from input files.
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = False
packages = find:
python_requires = >=3.7
install_requires =
    appdirs
    immutables
    configargparse
    connection_pool >=0.0.3
    datrie
    docutils
    gitpython
    humanfriendly
    jinja2 >=3.0,<4.0
    jsonschema
    nbformat
    packaging
    psutil
    pulp >=2.0
    pyyaml
    requests
    reretry
    smart_open >=3.0
    snakemake-interface-executor-plugins >=6.0.0,<7.0
    snakemake-interface-common >=1.12.0,<2.0
    snakemake-interface-storage-plugins >=1.1.1,<2.0
    stopit
    tabulate
    throttler
    toposort >=1.10
    wrapt
    yte >=1.5.1,<2.0
    conda-inject >=1.1.1,<2.0

[options.extras_require]
google-cloud =
    google-api-python-client
    google-cloud-storage
    google-crc32c
    oauth2client
azure = 
    azure-storage-blob
    azure-batch
    azure-core
    azure-identity
    azure-mgmt-batch

messaging = slacker
pep =
    eido
    peppy
reports = pygments

[options.entry_points]
console_scripts =
    snakemake = snakemake.cli:main
    snakemake-bash-completion = snakemake.cli:bash_completion

[options.packages.find]
include = snakemake, snakemake.*

[options.package_data]
* = *.css, *.sh, *.html, *.jinja2, *.js, *.svg, Snakefile
