[metadata]
name = snakemake
author = Johannes Köster
author_email = johannes.koester@uni-due.de
project_urls =
    Homepage = https://snakemake.github.io
    Documentation = https://snakemake.readthedocs.io
    Source = https://github.com/snakemake/snakemake
description = Workflow management system to create reproducible and scalable data analyses
long_description =
    Snakemake is a workflow management system that aims to reduce the
    complexity of creating workflows by providing a fast and comfortable
    execution environment, together with a clean and modern specification
    language in python style. Snakemake workflows are essentially Python
    scripts extended by declarative code to define rules. Rules describe
    how to create output files from input files.
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = False
packages = find:
python_requires = >=3.11
install_requires =
    appdirs
    immutables
    configargparse
    connection_pool >=0.0.3
    datrie
    docutils
    gitpython
    humanfriendly
    jinja2 >=3.0,<4.0
    jsonschema
    nbformat
    packaging
    psutil
    pulp >=2.3.1,<2.9 # pulp introduced a breaking change from 2.7 to 2.8. Hence we should always pin to the minor version.
    pyyaml
    requests >=2.8.1,<3.0
    reretry
    smart-open >=4.0,<8.0
    snakemake-interface-executor-plugins >=9.2.0,<10.0
    snakemake-interface-common >=1.17.0,<2.0
    snakemake-interface-storage-plugins >=3.2.3,<4.0
    snakemake-interface-report-plugins >=1.0.0,<2.0.0
    stopit
    tabulate
    throttler
    toposort >=1.10,<2.0
    wrapt
    yte >=1.5.1,<2.0
    dpath >=2.1.6,<3.0.0
    conda-inject >=1.3.1,<2.0
setup_requires = setuptools-download >= 1.1.0

[setuptools_download]
download_data_files =
    [share/snakemake/assets/snakemake/LICENSE.md]
    url = https://raw.githubusercontent.com/snakemake/snakemake/main/LICENSE.md
    sha256 = 84a1a82b05c80637744d3fe8257235c15380efa6cc32608adf4b21f17af5d2b8
    [share/snakemake/assets/pygments/LICENSE]
    url = https://raw.githubusercontent.com/pygments/pygments/master/LICENSE
    sha256 = a9d66f1d526df02e29dce73436d34e56e8632f46c275bbdffc70569e882f9f17
    [share/snakemake/assets/tailwindcss/LICENSE]
    url = https://raw.githubusercontent.com/tailwindlabs/tailwindcss/master/LICENSE
    sha256 = 60e0b68c0f35c078eef3a5d29419d0b03ff84ec1df9c3f9d6e39a519a5ae7985
    [share/snakemake/assets/tailwindcss/tailwind.css]
    url = https://cdn.tailwindcss.com/3.0.23?plugins=forms@0.4.0,typography@0.5.2
    sha256 = 8a597dc918fb62e05db23a5f810327a045a62c57cfda16646075138a6ac696fa
    [share/snakemake/assets/react/LICENSE]
    url = https://raw.githubusercontent.com/facebook/react/main/LICENSE
    sha256 = da6d3703ed11cbe42bd212c725957c98da23cbff1998c05fa4b3d976d1a58e93
    [share/snakemake/assets/react/react.production.min.js]
    url = https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js
    sha256 = 4b4969fa4ef3594324da2c6d78ce8766fbbc2fd121fff395aedf997db0a99a06
    [share/snakemake/assets/react/react-dom.production.min.js]
    url = https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js
    sha256 = 21758ed084cd0e37e735722ee4f3957ea960628a29dfa6c3ce1a1d47a2d6e4f7
    [share/snakemake/assets/vega/vega.js]
    url = https://cdnjs.cloudflare.com/ajax/libs/vega/5.21.0/vega.js
    sha256 = b34c43055ef5d39a093e937522955dc359fbaec6c5b0259ae2de4c9da698e9fe
    [share/snakemake/assets/vega/LICENSE]
    url = https://raw.githubusercontent.com/vega/vega/main/LICENSE
    sha256 = 63727832aaf62004a2b249c933e327f3c90caf49e41a72f4bf436edf632cbda8
    [share/snakemake/assets/vega-lite/vega-lite.js]
    url = https://cdnjs.cloudflare.com/ajax/libs/vega-lite/5.2.0/vega-lite.js
    sha256 = 6eb7f93121cd9f44cf8640244f87c5e143f87c7a0b6cd113da4a9e41e3adf0aa
    [share/snakemake/assets/vega-lite/LICENSE]
    url = https://raw.githubusercontent.com/vega/vega-lite/next/LICENSE
    sha256 = f618900fd0d64046963b29f40590cdd1e341a2f41449f99110d82fd81fea808c
    [share/snakemake/assets/vega-embed/vega-embed.js]
    url = https://cdnjs.cloudflare.com/ajax/libs/vega-embed/6.20.8/vega-embed.js
    sha256 = 4e546c1f86eb200333606440e92f76e2940b905757018d9672cd1708e4e6ff0a
    [share/snakemake/assets/vega-embed/LICENSE]
    url = https://raw.githubusercontent.com/vega/vega-embed/next/LICENSE
    sha256 = 32df67148f0fc3db0eb9e263a7b75d07f1eb14c61955005a4a39c6918d10d137
    [share/snakemake/assets/heroicons/LICENSE]
    url = https://raw.githubusercontent.com/tailwindlabs/heroicons/master/LICENSE
    sha256 = 60e0b68c0f35c078eef3a5d29419d0b03ff84ec1df9c3f9d6e39a519a5ae7985
    [share/snakemake/assets/prop-types/prop-types.min.js]
    url = https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.7.2/prop-types.min.js
    sha256 = 4c88350517ee82aa4f3368e67ef1a453ca6636dcfa6449b4e3d6faa5c877066e
    [share/snakemake/assets/prop-types/LICENSE]
    url = https://raw.githubusercontent.com/facebook/prop-types/main/LICENSE
    sha256 = f657f99d3fb9647db92628e96007aabb46e5f04f33e49999075aab8e250ca7ce
[options.extras_require]
messaging = slack_sdk
pep =
    eido
    peppy
reports = pygments

[options.entry_points]
console_scripts =
    snakemake = snakemake.cli:main

[options.packages.find]
include = snakemake, snakemake.*

[options.package_data]
* = *.css, *.sh, *.html, *.jinja2, *.js, *.svg, Snakefile
