[metadata]
name = snakemake
author = Johannes Köster
author_email = johannes.koester@uni-due.de
project_urls =
    Homepage = https://snakemake.github.io
    Documentation = https://snakemake.readthedocs.io
    Source = https://github.com/snakemake/snakemake
description = Workflow management system to create reproducible and scalable data analyses
long_description =
    Snakemake is a workflow management system that aims to reduce the
    complexity of creating workflows by providing a fast and comfortable
    execution environment, together with a clean and modern specification
    language in python style. Snakemake workflows are essentially Python
    scripts extended by declarative code to define rules. Rules describe
    how to create output files from input files.
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    appdirs
    immutables
    configargparse
    connection_pool >=0.0.3
    docutils
    gitpython
    humanfriendly
    jinja2 >=3.0,<4.0
    jsonschema
    nbformat
    packaging
    psutil
    pulp >=2.3.1,<2.10 # pulp introduced a breaking change from 2.7 to 2.8. Hence we should always pin to the minor version.
    pyyaml
    requests >=2.8.1,<3.0
    reretry
    smart-open >=4.0,<8.0
    snakemake-interface-executor-plugins >=9.3.2,<10.0
    snakemake-interface-common >=1.17.0,<2.0
    snakemake-interface-storage-plugins >=3.2.3,<4.0
    snakemake-interface-report-plugins >=1.1.0,<2.0.0
    snakemake-interface-software-deployment-plugins >=0.2.1,<1.0
    tabulate
    throttler
    wrapt
    yte >=1.5.5,<2.0
    dpath >=2.1.6,<3.0.0
    conda-inject >=1.3.1,<2.0

[options.extras_require]
messaging = slack_sdk
pep =
    eido
    peppy
reports = pygments

[options.entry_points]
console_scripts =
    snakemake = snakemake.cli:main

[options.packages.find]
include = snakemake, snakemake.*

[options.package_data]
* = *.css, *.sh, *.html, *.jinja2, *.js, *.svg, Snakefile. *.rst
