[metadata]
name = dummy
version = 0.0.0
author = Egor Kosaretskiy
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

